72) kernel: net: ipv6: fib6_rules should return exact return value.<br>
73) kernel: net: ipv4/6: handle PMTU in all ICMP error handlers.<br>
74) kernel: net: sit: always notify change when params are updated.<br>
75) kernel: net: sit: generate icmpv6 error when receiving icmpv4 error.<br>
76) kernel: net: move away from NLMSG_PUT().<br>
77) kernel: net: do not use RTA_PUT() macros.<br>
78) kernel: net: fix pptp regession, use generic tracking for GRE if ALG not loaded and PPTP support builtin.<br>
79) kernel: net: bridge: allow setting hash_max + multicast_router if interface is down.<br>
80) kernel: net: bridge: fix parsing of MLDv2 reports.<br>
81) kernel: net: bridge: skip fdb add if the port shouldn't learn.<br>
82) kernel: net: complete remove Token Ring.<br>
83) kernel: net: ppp: deflate: never return len larger than output buffer.<br>
84) kernel: net: inet: properly align icsk_ca_priv.<br>
<br>
<br>
<b>3.1.x</b><br>
1) mtd_write: blink leds at every erase/write flash access.<br>
2) fs: clanup led blink direct calls.<br>
3) init.d: read sysled gpio from kernel config.<br>
4) init.d: more early btn reset check start.<br>
5) kernel: mips: irq: use DECLARE_BITMAP.<br>
6) kernel: mips: bmips: fix bmips_wr_vec().<br>
7) kernel: ralink_arch: NR_IRQS is no longer dependent from BITS_PER_LONG.<br>
8) kernel: net: udp: fix behavior of wrong checksums.<br>
9) kernel: jhash: update jhash_[321]words functions to use correct initval.<br>
10) kernel: sfhash: add generic inline helper for more gcc optimize effect.<br>
11) kernel: mm: use clear_page_mlock() in page_remove_rmap().<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~90%).<br>
2) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
3) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>